@@ -8,3 +8,5 @@ Trunk:
   COMPRESS-2. Add a new native loader, since Hadoop's doesn't know about the
   new library (johan via omalley)
 
+  COMPRESS-11. Add a compatability class for reading data that was compressed
+  by Hadoop's class. (hong via omalley)
